--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,14 @@
     <string name="nametextview">nameTextview</string>
     <string name="categorytextview">categoryTextview</string>
     <string name="districttextview">districtTextview</string>
+
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+
+
+
+
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
