--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,10 @@
     <string name="back">Back</string>
     <string name="hello">Hello</string>
     <string name="clear">Clear</string>
+    <string name="price">Price</string>
+    <string name="minus">-</string>
+    <string name="plus">+</string>
+    <string name="add_to_cart">Add to Cart</string>
 
 
 </resources>
